--- a/qtfuzzylite/ui/Window.ui
+++ b/qtfuzzylite/ui/Window.ui
@@ -37,8 +37,17 @@
     <property name="spacing">
      <number>0</number>
     </property>
-    <property name="margin">
+    <property name="leftMargin">
      <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>6</number>
     </property>
     <item>
      <widget class="QToolBox" name="tab_container">
@@ -54,7 +63,7 @@
          <x>0</x>
          <y>0</y>
          <width>560</width>
-         <height>408</height>
+         <height>402</height>
         </rect>
        </property>
        <attribute name="label">
@@ -68,7 +77,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QGroupBox" name="groupBox">
+         <widget class="QGroupBox" name="groupBox1">
           <layout class="QVBoxLayout" name="verticalLayout_7">
            <property name="spacing">
             <number>0</number>
@@ -355,7 +364,7 @@
          <x>0</x>
          <y>0</y>
          <width>560</width>
-         <height>408</height>
+         <height>402</height>
         </rect>
        </property>
        <attribute name="label">
@@ -369,7 +378,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QGroupBox" name="groupBox">
+         <widget class="QGroupBox" name="groupBox2">
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
@@ -387,7 +396,7 @@
             <number>9</number>
            </property>
            <property name="bottomMargin">
-            <number>3</number>
+            <number>0</number>
            </property>
            <item>
             <widget class="QSplitter" name="spl_control_inout_rules">
@@ -451,7 +460,7 @@
                         <x>0</x>
                         <y>0</y>
                         <width>267</width>
-                        <height>99</height>
+                        <height>98</height>
                        </rect>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -544,7 +553,7 @@
                         <x>0</x>
                         <y>0</y>
                         <width>266</width>
-                        <height>99</height>
+                        <height>98</height>
                        </rect>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_13">
