--- a/qtfuzzylite/ui/Window.ui
+++ b/qtfuzzylite/ui/Window.ui
@@ -63,7 +63,7 @@
          <x>0</x>
          <y>0</y>
          <width>560</width>
-         <height>402</height>
+         <height>392</height>
         </rect>
        </property>
        <attribute name="label">
@@ -73,7 +73,16 @@
         <property name="spacing">
          <number>0</number>
         </property>
-        <property name="margin">
+        <property name="leftMargin">
+         <number>3</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>3</number>
+        </property>
+        <property name="bottomMargin">
          <number>0</number>
         </property>
         <item>
@@ -83,16 +92,16 @@
             <number>0</number>
            </property>
            <property name="leftMargin">
-            <number>0</number>
+            <number>6</number>
            </property>
            <property name="topMargin">
-            <number>0</number>
+            <number>3</number>
            </property>
            <property name="rightMargin">
-            <number>9</number>
+            <number>6</number>
            </property>
            <property name="bottomMargin">
-            <number>0</number>
+            <number>3</number>
            </property>
            <item>
             <widget class="QSplitter" name="spl_setup_inout_rules">
@@ -363,8 +372,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>560</width>
-         <height>402</height>
+         <width>185</width>
+         <height>210</height>
         </rect>
        </property>
        <attribute name="label">
@@ -374,7 +383,16 @@
         <property name="spacing">
          <number>0</number>
         </property>
-        <property name="margin">
+        <property name="leftMargin">
+         <number>3</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>3</number>
+        </property>
+        <property name="bottomMargin">
          <number>0</number>
         </property>
         <item>
@@ -386,17 +404,8 @@
            <property name="spacing">
             <number>0</number>
            </property>
-           <property name="leftMargin">
-            <number>0</number>
-           </property>
-           <property name="topMargin">
-            <number>0</number>
-           </property>
-           <property name="rightMargin">
-            <number>9</number>
-           </property>
-           <property name="bottomMargin">
-            <number>0</number>
+           <property name="margin">
+            <number>3</number>
            </property>
            <item>
             <widget class="QSplitter" name="spl_control_inout_rules">
@@ -459,8 +468,8 @@
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>267</width>
-                        <height>98</height>
+                        <width>100</width>
+                        <height>30</height>
                        </rect>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -552,8 +561,8 @@
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>266</width>
-                        <height>98</height>
+                        <width>100</width>
+                        <height>30</height>
                        </rect>
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_13">
@@ -739,7 +748,7 @@
     <string>Terms</string>
    </property>
    <property name="toolTip">
-    <string>Term Toolbox</string>
+    <string>Terms</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+T</string>
