--- a/qtfuzzylite/ui/Term.ui
+++ b/qtfuzzylite/ui/Term.ui
@@ -119,8 +119,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>225</width>
-             <height>224</height>
+             <width>233</width>
+             <height>248</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -212,8 +212,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>225</width>
-             <height>224</height>
+             <width>233</width>
+             <height>248</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -315,8 +315,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>225</width>
-             <height>224</height>
+             <width>233</width>
+             <height>248</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -398,8 +398,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>225</width>
-             <height>224</height>
+             <width>233</width>
+             <height>248</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -549,15 +549,15 @@
            <bool>true</bool>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>5</number>
           </property>
           <widget class="QWidget" name="page_6">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>132</width>
-             <height>79</height>
+             <width>233</width>
+             <height>186</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -636,8 +636,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>225</width>
-             <height>156</height>
+             <width>233</width>
+             <height>186</height>
             </rect>
            </property>
            <attribute name="label">
@@ -724,8 +724,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>137</width>
-             <height>114</height>
+             <width>233</width>
+             <height>186</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -814,8 +814,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>130</width>
-             <height>149</height>
+             <width>233</width>
+             <height>186</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -914,8 +914,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>137</width>
-             <height>149</height>
+             <width>233</width>
+             <height>186</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -1014,8 +1014,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>240</width>
-             <height>157</height>
+             <width>233</width>
+             <height>186</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -1139,15 +1139,15 @@
            <bool>true</bool>
           </property>
           <property name="currentIndex">
-           <number>3</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="page_12">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>126</width>
-             <height>79</height>
+             <width>233</width>
+             <height>248</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -1226,8 +1226,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>131</width>
-             <height>79</height>
+             <width>233</width>
+             <height>248</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -1318,8 +1318,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>126</width>
-             <height>79</height>
+             <width>233</width>
+             <height>248</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -1398,8 +1398,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>225</width>
-             <height>224</height>
+             <width>233</width>
+             <height>248</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -1505,6 +1505,7 @@
   <tabstop>sbx_trapezoid_d</tabstop>
   <tabstop>sbx_rectangle_min</tabstop>
   <tabstop>sbx_rectangle_max</tabstop>
+  <tabstop>ptx_discrete</tabstop>
   <tabstop>btn_discrete_parse</tabstop>
   <tabstop>sbx_gaussian_center</tabstop>
   <tabstop>sbx_gaussian_width</tabstop>
@@ -1521,9 +1522,11 @@
   <tabstop>sbx_pishape_br</tabstop>
   <tabstop>sbx_sigmoid_diff_left</tabstop>
   <tabstop>sbx_sigmoid_diff_rising</tabstop>
+  <tabstop>sbx_sigmoid_diff_falling</tabstop>
   <tabstop>sbx_sigmoid_diff_right</tabstop>
   <tabstop>sbx_sigmoid_prod_left</tabstop>
   <tabstop>sbx_sigmoid_prod_rising</tabstop>
+  <tabstop>sbx_sigmoid_prod_falling</tabstop>
   <tabstop>sbx_sigmoid_prod_right</tabstop>
   <tabstop>sbx_ramp_start</tabstop>
   <tabstop>sbx_ramp_end</tabstop>
