--- a/qtfuzzylite/ui/Viewer.ui
+++ b/qtfuzzylite/ui/Viewer.ui
@@ -66,7 +66,7 @@
        <item>
         <widget class="QDoubleSpinBox" name="sbx_x">
          <property name="toolTip">
-          <string>Input value</string>
+          <string/>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
